@@ -137,6 +137,8 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 %config(noreplace) /var/lib/cobbler/snippets/partition_select
 /var/lib/cobbler/elilo-3.6-ia64.efi
 /var/lib/cobbler/menu.c32
+%defattr(2660,root,root)
+%config(noreplace) /etc/cobbler/auth.conf 
 %defattr(2755,root,root)
 %config(noreplace) /var/lib/cobbler/cobbler_hosts
 %defattr(-,root,root)
