@@ -68,6 +68,7 @@ if __name__ == "__main__":
 				(etcpath,  ['templates/pxesystem_ia64.template']),
 				(etcpath,  ['templates/pxeprofile.template']),
                                 (etcpath,  ['config/modules.conf']),
+                                (etcpath,  ['config/auth.conf']),
                                 (snippets, ['snippets/partition_select']),
                                 (manpath,  ['docs/cobbler.1.gz']),
                                 (etcpath,  ['config/rsync.exclude']),
