@@ -13,6 +13,7 @@ Cobbler CHANGELOG
 - added --dhcp-tag section for better DHCP customization (esp with multiple subnets)
 - added Apache proxying around XMLRPC port for wider network access
 - refactor XMLRPC API and provide for a read-write API
+- allow for configuring of read-write XMLRPC users in /etc/cobbler/auth.conf
  
 * Thu Aug 30 2007 - 0.6.1
 - re enable --resolve in yumdownloader (cobbler repo mgmt feature)
